--- a/Starter_Code/part_1_mars_news.ipynb
+++ b/Starter_Code/part_1_mars_news.ipynb
@@ -81,948 +81,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "News - Mars Exploration Program\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "MARS Planet Science\n",
-      "\n",
-      "\n",
-      "Exploration Program\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "The Red Planet\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "The Program\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "News & Events\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Multimedia\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Missions\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "More\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "News\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Latest\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "All Categories\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "November 9, 2022\n",
-      "\n",
-      "\n",
-      "NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\n",
-      "\n",
-      "\n",
-      "For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "November 1, 2022\n",
-      "\n",
-      "\n",
-      "NASA Prepares to Say 'Farewell' to InSight Spacecraft\n",
-      "\n",
-      "\n",
-      "A closer look at what goes into wrapping up the mission as the spacecraft’s power supply continues to dwindle.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 28, 2022\n",
-      "\n",
-      "\n",
-      "NASA and ESA Agree on Next Steps to Return Mars Samples to Earth\n",
-      "\n",
-      "\n",
-      "The agency’s Perseverance rover will establish the first sample depot on Mars.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 27, 2022\n",
-      "\n",
-      "\n",
-      "NASA's InSight Lander Detects Stunning Meteoroid Impact on Mars\n",
-      "\n",
-      "\n",
-      "The agency’s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 21, 2022\n",
-      "\n",
-      "\n",
-      "NASA To Host Briefing on InSight, Mars Reconnaissance Orbiter Findings\n",
-      "\n",
-      "\n",
-      "Scientists from two Mars missions will discuss how they combined images and data for a major finding on the Red Planet.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 20, 2022\n",
-      "\n",
-      "\n",
-      "Why NASA Is Trying To Crash Land on Mars\n",
-      "\n",
-      "\n",
-      "Like a car’s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 19, 2022\n",
-      "\n",
-      "\n",
-      "Curiosity Mars Rover Reaches Long-Awaited Salty Region\n",
-      "\n",
-      "\n",
-      "After years of climbing, the Mars rover has arrived at a special region believed to have formed as Mars’ climate was drying.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 12, 2022\n",
-      "\n",
-      "\n",
-      "Mars Mission Shields Up for Tests\n",
-      "\n",
-      "\n",
-      "Protecting Mars Sample Return spacecraft from micrometeorites requires high-caliber work.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "October 7, 2022\n",
-      "\n",
-      "\n",
-      "NASA's InSight Waits Out Dust Storm\n",
-      "\n",
-      "\n",
-      "InSight’s team is taking steps to help the solar-powered lander continue operating for as long as possible.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "September 19, 2022\n",
-      "\n",
-      "\n",
-      "NASA's InSight 'Hears' Its First Meteoroid Impacts on Mars\n",
-      "\n",
-      "\n",
-      "The Mars lander’s seismometer has picked up vibrations from four separate impacts in the past two years.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "September 15, 2022\n",
-      "\n",
-      "\n",
-      "NASA's Perseverance Rover Investigates Geologically Rich Mars Terrain\n",
-      "\n",
-      "\n",
-      "The latest findings provide greater detail on a region of the Red Planet that has a watery past and is yielding promising samples for the NASA-ESA Mars Sample Return campaign.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "September 12, 2022\n",
-      "\n",
-      "\n",
-      "NASA to Host Briefing on Perseverance Mars Rover Mission Operations\n",
-      "\n",
-      "\n",
-      "Members of the mission will discuss the rover’s activities as it gathers samples in an ancient river delta.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "August 25, 2022\n",
-      "\n",
-      "\n",
-      "NASA's Perseverance Makes New Discoveries in Mars' Jezero Crater\n",
-      "\n",
-      "\n",
-      "The rover found that Jezero Crater’s floor is made up of volcanic rocks that have interacted with water.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "August 5, 2022\n",
-      "\n",
-      "\n",
-      "10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive\n",
-      "\n",
-      "\n",
-      "Despite signs of wear, the intrepid spacecraft is about to start an exciting new chapter of its mission as it climbs a Martian mountain.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "August 4, 2022\n",
-      "\n",
-      "\n",
-      "SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars\n",
-      "\n",
-      "\n",
-      "“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "More\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "You Might Also Like\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "NASA Marks 25 Years Since Pathfinder Touched Down on Mars\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "NASA's Perseverance Rover Captures Video of Solar Eclipse on Mars\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "NASA, UAE Mars Missions Agree to Share Science Data\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "The Red Planet\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Dashboard\n",
-      "\n",
-      "\n",
-      "Science Goals\n",
-      "\n",
-      "\n",
-      "The Planet\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "The Program\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Mission Statement\n",
-      "\n",
-      "\n",
-      "About the Program\n",
-      "\n",
-      "\n",
-      "Organization Why Mars?\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Multimedia\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Images\n",
-      "\n",
-      "\n",
-      "Videos\n",
-      "\n",
-      "\n",
-      "More Resources\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Missions\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Past\n",
-      "\n",
-      "\n",
-      "Present\n",
-      "\n",
-      "\n",
-      "Future\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Images and news content extracted from NASA's \n",
-      "Mars News\n",
-      " website on November 9, 2022.\n",
-      "\n",
-      "         Images used in accordance with the \n",
-      "JPL Image Use Policy\n",
-      ".\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "This site is operated by edX Boot Camps LLC for educational purposes only.  \n",
-      "\n",
-      "            This is not a website endorsed by NASA. This website is intended only for internal academic purposes.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ambmd\\AppData\\Local\\Temp\\ipykernel_23596\\3970806686.py:2: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+      "C:\\Users\\ambmd\\AppData\\Local\\Temp\\ipykernel_25476\\2944725136.py:2: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
       "  text_elements = soup.find_all(text=True)\n"
      ]
     }
@@ -1030,8 +92,9 @@
    "source": [
     "# Extract all the text elements\n",
     "text_elements = soup.find_all(text=True)\n",
-    "for element in text_elements:\n",
-    "    print(element)\n",
+    "# This commented code chunk prints out each text element that was found. \n",
+    "#for element in text_elements:\n",
+    "#    print(element)\n",
     "text_list = []\n",
     "for element in text_elements:\n",
     "    text_list.append(element.get_text())"
